--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-.DS_Store
 # This .gitignore file should be placed at the root of your Unity project directory
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
@@ -43,6 +42,8 @@ ExportedObj/
 *.mdb
 *.opendb
 *.VC.db
+
+*.DS_Store
 
 # Unity3D generated meta files
 *.pidb.meta
